--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -10,9 +10,10 @@
             <div>
             hey there partner! <br />
             <div>
-            {% if categories %}
+            {% if category %}
+            <h2>Most Liked Categories</h2>
             <ul>
-                {% for category in categories %}
+                {% for category in category %}
                     <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
                 {% endfor %}
             </ul>
@@ -20,7 +21,16 @@
                 <strong>There are no categories present.</strong>
             {% endif %}
             </div>
-            
+            <div>
+            {% if pages %}
+            <h2>Most Viewed Pages</h2>
+            <ul>
+                {% for page in pages %}
+                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            {% endif %}
+            </ul>
+            </div>
             <div>
             <a href="/rango/about/">About</a><br />
             <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango">
