Create a form - add Category

--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -32,8 +32,9 @@
             </ul>
             </div>
             <div>
-            <a href="/rango/about/">About</a><br />
-            <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango">
+                <a href="/rango/about/">About</a><br />
+                <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango">
+                <a href="/rango/category/add/">Add a New Category</a><br />
             </div>
     </body>
 </html>
