--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -3,11 +3,23 @@
 
 <html>
     <head>
-        <title>Rango</title>
+        <title>
+            Rango - {% block title_block%} How to Tango with Django!{% endblock %}
+        </title>
     </head>
     <body>
         <!-- Page spucific content goes here -->
-        {% block body_block %}
-        {% endblock %}
+        <div>
+            {% block body_block %}
+            {% endblock %}
+        </div>
+        <hr />
+        <div>
+            <ul>
+                <li><a href="{% url 'add_category' %}"></a></li>
+                <li><a href="{% url 'about' %}"></a></li>
+                <li><a href="{% url 'index' %}"></a></li>
+            </ul>
+        </div>
     </body>
 </html>
