Create a user registration view, template and url

--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -19,6 +19,7 @@
                 <li><a href="{% url 'add_category' %}"></a></li>
                 <li><a href="{% url 'about' %}"></a></li>
                 <li><a href="{% url 'index' %}"></a></li>
+                <li><a href="{% url 'register' %}"></a>Sign Up</li>
             </ul>
         </div>
     </body>
