--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -16,10 +16,11 @@
         <hr />
         <div>
             <ul>
-                <li><a href="{% url 'add_category' %}"></a></li>
+                <li><a href="{% url 'create_category' %}"></a></li>
                 <li><a href="{% url 'about' %}"></a></li>
                 <li><a href="{% url 'index' %}"></a></li>
                 <li><a href="{% url 'register' %}"></a>Sign Up</li>
+                <li><a href="{% url 'login' %}"></a>Login</li>
             </ul>
         </div>
     </body>
