--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -16,12 +16,16 @@
         <hr />
         <div>
             <ul>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
                 <li><a href="{% url 'create_category' %}">Create a New Category</a></li>
+                <li><a href="{% url 'auth_logout' %}">Logout</a></li>
+            {% else %}
+                <li><a href="{% url 'auth_login' %}">Sign In</a></li>
+                <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
+            {% endif %}
                 <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="{% url 'index' %}">Index</a></li>
-                <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
-                <li><a href="{% url 'auth_login' %}">Login</a></li>
-                <li><a href="{% url 'auth_logout' %}">Logout</a></li>
             </ul>
         </div>
     </body>
