--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -2,7 +2,8 @@
 {% load staticfiles %}
 
 <html>
-    <head>
+    <head lang="en">
+        <meta charset="UTF-8">
         <title>
             Rango - {% block title_block%} How to Tango with Django!{% endblock %}
         </title>
