--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -1,3 +1,27 @@
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}Rango{% endblock %}
+
+{% block body_block %}
+    {% if category %}
+    <h1>{{ category.name }}</h1>
+        {% if pages %}
+        <ul>
+            {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+        </ul>
+        {% else %}
+            <strong>No pages currently in category.</strong>
+        {% endif %}
+        <a href="{% url 'create_page' category.slug %}">Add a Page</a>
+    {% else %}
+        The specified category does not exist!
+    {% endif %}
+{% endblock %}
+    
+<!--
 <!DOCTYPE html>
 <html>
 <head>
@@ -28,3 +52,4 @@
     </div>
 </body>
 </html>
+-->
