--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,3 +1,41 @@
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}Home{% endblock %}
+
+{% block body_block %}
+    <h1>Rango says...</h1>
+        <div>
+        hey there partner! <br />
+        <div>
+        {% if category %}
+        <h2>Most Liked Categories</h2>
+        <ul>
+            {% for category in category %}
+                <li><a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
+            {% endfor %}
+        </ul>
+        {% else %}
+            <strong>There are no categories present.</strong>
+        {% endif %}
+        </div>
+        <div>
+        {% if pages %}
+        <h2>Most Viewed Pages</h2>
+        <ul>
+            {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+        {% endif %}
+        </ul>
+        </div>
+        <div>
+            <a href="{% url 'about' %}">About</a><br />
+            <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango">
+        </div>
+{% endblock %}
+
+<!--
 <!DOCTYPE html>
 {% load staticfiles %}
 
@@ -38,3 +76,4 @@
             </div>
     </body>
 </html>
+-->
