Parameterised template tags. we use parameterisation to highlight which category we are looking at when visiting.

--- a/tango_with_django_project/templates/rango/create_category.html
+++ b/tango_with_django_project/templates/rango/create_category.html
@@ -21,6 +21,7 @@
 {% endblock %}
 
 <!--
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -43,5 +44,4 @@
             </form>
         </div>
     </body>
-</html>
--->
+</html> -->
