--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -25,7 +25,7 @@
             {% if user.is_authenticated %}
                 <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
                 <li><a href="{% url 'create_category' %}">Create a New Category</a></li>
-                <li><a href="{% url 'auth_logout' %}">Logout</a></li>
+                <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
             {% else %}
                 <li><a href="{% url 'auth_login' %}">Sign In</a></li>
                 <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
