--- a/tango_with_django_project/templates/registration/login.html
+++ b/tango_with_django_project/templates/registration/login.html
@@ -1,11 +1,12 @@
 {% extends "rango/base.html" %}
 {% block body_block %}
 	<h1>Login</h1>
-	<form>
+	<form method="post" action=".">
 		{% csrf_token %}
 		{{ form.as_p }}
 		<!-- Provide a button to click to submit the form. -->
 		<input type="submit" name="submit" value="Login" />
+		<input type="hidden" name="next" value="{{next}}" />
 	</form>
 	<p>
 		Not a member?
