--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -4,10 +4,14 @@
 {% block title_block %}Home{% endblock %}
 
 {% block body_block %}
-    <h1>Rango says...</h1>
-        <div>
+<div class="jumbotron">
+    <h1 class="display-3">Rango says...</h1>
+
         hey there partner! <br />
+</div> 
         <div>
+<div class="row marketing">
+    <div class="col-lg-6">
         {% if category %}
         <h2>Most Liked Categories</h2>
         <ul>
@@ -18,8 +22,8 @@
         {% else %}
             <strong>There are no categories present.</strong>
         {% endif %}
-        </div>
-        <div>
+    </div>
+    <div class="col-lg-6">
         {% if pages %}
         <h2>Most Viewed Pages</h2>
         <ul>
@@ -28,7 +32,7 @@
             {% endfor %}
         {% endif %}
         </ul>
-        </div>
+    </div>
         <div>
             <a href="{% url 'about' %}">About</a><br />
             <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango">
