--- a/tango_with_django_project/templates/rango/create_category.html
+++ b/tango_with_django_project/templates/rango/create_category.html
@@ -4,9 +4,9 @@
 {% block title_block %}Add a Category{% endblock %}
 
 {% block body_block %}
-    <h1>Add a Category</h1>
     <div>
-        <form id="category_form" method="post" action="{% url 'create_category' %}">
+        <form role="form" id="category_form" method="post" action="{% url 'create_category' %}">
+        <h2 class="form-sigin-heading">Add a Category</h2>
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
@@ -16,7 +16,7 @@
                 {{ field.help_text }}
                 {{ field }}
             {% endfor %}
-            <input type="submit" name="submit" value="Create Category" />
+            <button class="btn btn-primary" type="submit" name="submit">Create Category</button>
         </form>
 {% endblock %}
 
