--- a/tango_with_django_project/templates/rango/create_page.html
+++ b/tango_with_django_project/templates/rango/create_page.html
@@ -6,8 +6,9 @@
 {% block body_block %}
     {% if category %}
     
-    <h1>Add a Page to {{category.name}}</h1>
-    <form id="page_form" method="post" action="{% url 'create_page' category.slug  %}">
+    <!--<h1>Add a Page to {{category.name}}</h1>-->
+    <form role="form" id="page_form" method="post" action="{% url 'create_page' category.slug  %}">
+        <h2 class="form-signin-heading">Add a Page to <a href="{% url 'show_category' category.slug %}">{{category.name}}</a></h2>
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
             {{ hidden }}
@@ -17,11 +18,11 @@
             {{ field.help_text }}
             {{ field }}
         {% endfor %}
-        <input type="submit" name="submit" value="Add Page" />
+        <button class="btn btn-primary" type="submit" name="submit">Add Page</button>
     </form>
     
     {% else %}
-        The specified category does not exist!
+        <p>The specified category does not exist!</p>
     {% endif%}
 {% endblock %}
 <!--
