--- a/tango_with_django_project/templates/registration/logout.html
+++ b/tango_with_django_project/templates/registration/logout.html
@@ -1,4 +1,4 @@
-{% extends "rango/base.html" %}
+{% extends "rango/base_bootstrap.html" %}
 {% block body_block %}
 	<h1>Logged Out</h1>
 	<p>You are now logged out.</p>
