--- a/tango_with_django_project/templates/registration/login.html
+++ b/tango_with_django_project/templates/registration/login.html
@@ -1,11 +1,13 @@
 {% extends "rango/base_bootstrap.html" %}
+{% load bootstrap_toolkit %}
 {% block body_block %}
 	<h1>Login</h1>
 	<form method="post" action=".">
 		{% csrf_token %}
-		{{ form.as_p }}
+		{{ form|as_bootstrap }}
 		<!-- Provide a button to click to submit the form. -->
-		<input type="submit" name="submit" value="Login" />
+		<button class="btn btn-default" type="submit" name="Login">Login</button>
+		<!-- <input type="submit" name="submit" value="Login" /> -->
 		<input type="hidden" name="next" value="{{next}}" />
 	</form>
 	<p>
