--- a/tango_with_django_project/templates/registration/registration_form.html
+++ b/tango_with_django_project/templates/registration/registration_form.html
@@ -1,10 +1,11 @@
 {% extends "rango/base_bootstrap.html" %}
+{% load bootstrap_toolkit %}
 {% block body_block %}
 	<h2 class="form-signin-heading">Register Here</h2>
 	<form role="form" method="post" action=".">
 		{% csrf_token %}
 	<div class="form-group">
-		{{ form.as_p }}
+		{{ form|as_bootstrap }}
 	</div>
 		<!-- Provide a button to click to submit the form. -->
 		<button class="btn btn-default" type="submit" name="submit">Submit</button>
