--- a/tango_with_django_project/templates/rango/base_bootstrap.html
+++ b/tango_with_django_project/templates/rango/base_bootstrap.html
@@ -35,6 +35,7 @@
               <li class="nav-item"><a class="nav-link" href="{% url 'restricted' %}">Restricted Page</a></li>
               <li class="nav-item"><a class="nav-link" href="{% url 'create_category' %}">Create a New Category</a></li>
               <li class="nav-item"><a class="nav-link" href="{% url 'auth_password_change' %}">Change Password</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'profile' user.username %}">Profile</a></li>
               <li class="nav-item"><a class="nav-link" href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
           {% else %}
               <li class="nav-item"><a class="nav-link" href="{% url 'auth_login' %}">Sign In</a></li>
